--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: Build-relearn
+name: relearn
 
 on:
   push:
@@ -14,9 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: make
-      run: make
     - name: make check
-      run: make check
+      run: gcc main.c Addition.c -o Addition.out
     - name: make distcheck
       run: make distcheck
