--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: make check
-      run: gcc main.c Addition.c -o Addition.out
+      run: make run -C 3_Implementation/version2 
     - name: make distcheck
       run: make distcheck
